--- a/CovidDataLake.DAL/CovidDataLake.DAL.csproj
+++ b/CovidDataLake.DAL/CovidDataLake.DAL.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Read\Pdf\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
+  </ItemGroup>
+
 </Project>
