Refactored kafka package and added configuration, still not done

--- a/CovidDataLake.WebApi/CovidDataLake.WebApi.csproj
+++ b/CovidDataLake.WebApi/CovidDataLake.WebApi.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CovidDataLake.DAL\CovidDataLake.DAL.csproj" />
+    <ProjectReference Include="..\CovidDataLake.Kafka\CovidDataLake.Kafka.csproj" />
   </ItemGroup>
 
 </Project>
