--- a/CovidDataLake.WebApi/appsettings.json
+++ b/CovidDataLake.WebApi/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "KafkaProducer": {
+
+  },
+  "Storage": {
+
+  },
+  "Validation": {
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
