--- a/CovidDataLake.WebApi/appsettings.Development.json
+++ b/CovidDataLake.WebApi/appsettings.Development.json
@@ -1,9 +1,24 @@
 {
+  "KafkaProducer": {
+    "Instances": [
+      {
+        "Host": "localhost",
+        "Port": 9092
+      }
+    ]
+  },
+  "Storage": {
+
+  },
+  "Validation": {
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
