All configurations are now working

--- a/CovidDataLake.WebApi/appsettings.json
+++ b/CovidDataLake.WebApi/appsettings.json
@@ -8,7 +8,7 @@
     "BasePath":  "E:\\DataLake" 
   },
   "Validation": {
-
+    "AllowedFileTypes":  ["csv", "pdf", "doc"] 
   },
   "Logging": {
     "LogLevel": {
