--- a/CovidDataLake.Storage/CovidDataLake.Storage.csproj
+++ b/CovidDataLake.Storage/CovidDataLake.Storage.csproj
@@ -1,21 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Read\Csv\" />
-    <Folder Include="Read\Excel\" />
-    <Folder Include="Read\Json\" />
-    <Folder Include="Read\Html\" />
-    <Folder Include="Read\Doc\" />
-    <Folder Include="Read\Xml\" />
-    <Folder Include="Read\Pdf\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="1.7.0" />
-  </ItemGroup>
 
 </Project>
