Managed to get a working request to write to a file

--- a/CovidDataLake.WebApi/appsettings.json
+++ b/CovidDataLake.WebApi/appsettings.json
@@ -8,7 +8,7 @@
     "BasePath":  "E:\\DataLake" 
   },
   "Validation": {
-    "AllowedFileTypes":  ["csv", "pdf", "doc"] 
+    "AllowedFileTypes":  [".csv", ".pdf", ".doc", ".txt"] 
   },
   "Logging": {
     "LogLevel": {
