--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -6,7 +6,8 @@
         "Port": 9092
       }
     ],
-    "GroupId":  "MetadataIndexer" 
+    "GroupId": "MetadataIndexer",
+    "Topic":   "fileTest" 
   },
   "Storage": {
     "BasePath": "E:\\DataLake"
