Extracted Amazon client logic to a different package

--- a/CovidDataLake.ContentIndexer/CovidDataLake.ContentIndexer.csproj
+++ b/CovidDataLake.ContentIndexer/CovidDataLake.ContentIndexer.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
@@ -18,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CovidDataLake.Amazon\CovidDataLake.Amazon.csproj" />
     <ProjectReference Include="..\CovidDataLake.Common\CovidDataLake.Common.csproj" />
     <ProjectReference Include="..\CovidDataLake.Kafka\CovidDataLake.Kafka.csproj" />
     <ProjectReference Include="..\CovidDataLake.Storage\CovidDataLake.Storage.csproj" />
