Content writer is now based on S3 as well

--- a/CovidDataLake.Storage/CovidDataLake.Storage.csproj
+++ b/CovidDataLake.Storage/CovidDataLake.Storage.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CovidDataLake.Amazon\CovidDataLake.Amazon.csproj" />
+  </ItemGroup>
+
 </Project>
