Extracted most of the amazon configuration to a configuration file for easy maintenance

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -7,10 +7,24 @@
       }
     ],
     "GroupId": "MetadataIndexer",
-    "Topic":   "fileTest" 
+    "Topic": "fileTest"
   },
   "Storage": {
     "BasePath": "E:\\DataLake"
-  }
-  }
+  },
+  "AmazonRootIndex": {
+    "BucketName": "bucket",
+    "RootIndexName": "root_index.txt",
+    "LockTimeSpanInSeconds": 30
+  },
+  "AmazonIndexFile": {
+    "BucketName": "bucket",
+    "NumOfMetadataRows": 50,
+    "BloomFilterCapacity": 10000,
+    "BloomFilterErrorRate": 0.1
+  },
+  "RedisIndexCache": {
+    "LockDurationInSeconds": 10
+  },
+  "AmazonGeneralConfig": {}
 }
