--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -26,5 +26,8 @@
   "RedisIndexCache": {
     "LockDurationInSeconds": 10
   },
-  "AmazonGeneralConfig": {}
+  "AmazonGeneralConfig": {
+    "ServiceUrl": "aws.s3.com" 
+  },
+  "Redis": "localhost:6379"
 }
