Many fixes to advance in sending the first file to aws

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -7,7 +7,7 @@
       }
     ],
     "GroupId": "MetadataIndexer",
-    "Topic": "fileTest"
+    "Topic": "covid-data-lake"
   },
   "Storage": {
     "BasePath": "E:\\DataLake"
