--- a/CovidDataLake.WebApi/appsettings.json
+++ b/CovidDataLake.WebApi/appsettings.json
@@ -1,8 +1,12 @@
 {
   "Kafka": {
     "Instances": [
-      { "Host":  "localhost", "Port":  9092  }
-    ] 
+      {
+        "Host": "localhost",
+        "Port": 9092
+      }
+    ],
+    "Topic":  "covid-data-lake" 
   },
   "Storage": {
     "BasePath":  "E:\\DataLake" 
