First successful end to end file addition to the index

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -10,8 +10,11 @@
     "Topic": "covid-data-lake"
   },
   "Storage": {
-    "BasePath": "E:\\DataLake"
+    "BasePath": "C:\\Path\\To"
   },
+  //AmazonRootIndex__BucketName
+  //AmazonIndexFile__BucketName
+  //AmazonGeneralConfig__ServiceUrl
   "AmazonRootIndex": {
     "BucketName": "bucket",
     "RootIndexName": "root_index.txt",
@@ -27,7 +30,7 @@
     "LockDurationInSeconds": 10
   },
   "AmazonGeneralConfig": {
-    "ServiceUrl": "aws.s3.com" 
+    "ServiceUrl": "aws_service_url"
   },
   "Redis": "localhost:6379"
 }
