--- a/CovidDataLake.ContentIndexer/CovidDataLake.ContentIndexer.csproj
+++ b/CovidDataLake.ContentIndexer/CovidDataLake.ContentIndexer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <PackageReference Include="jil" Version="2.17.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
@@ -16,7 +17,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.2.62" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
-    <PackageReference Include="utf8json" Version="1.3.7" />
   </ItemGroup>
 
   <ItemGroup>
