Refactored code + allowed splitting index files with many rows

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -21,10 +21,13 @@
     "LockTimeSpanInSeconds": 30
   },
   "AmazonIndexFile": {
-    "BucketName": "bucket",
+    "BucketName": "bucket"
+  },
+  "NeedleInHaystackIndex": {
     "NumOfMetadataRows": 50,
     "BloomFilterCapacity": 10000,
-    "BloomFilterErrorRate": 0.1
+    "BloomFilterErrorRate": 0.1,
+    "MaxRowsPerFile": 1000
   },
   "RedisIndexCache": {
     "LockDurationInSeconds": 10
