--- a/CovidDataLake.WebApi/CovidDataLake.WebApi.csproj
+++ b/CovidDataLake.WebApi/CovidDataLake.WebApi.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
@@ -13,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CovidDataLake.Common\CovidDataLake.Common.csproj" />
     <ProjectReference Include="..\CovidDataLake.Kafka\CovidDataLake.Kafka.csproj" />
+    <ProjectReference Include="..\CovidDataLake.Queries\CovidDataLake.Queries.csproj" />
     <ProjectReference Include="..\CovidDataLake.Storage\CovidDataLake.Storage.csproj" />
   </ItemGroup>
 
