--- a/CovidDataLake.WebApi/appsettings.json
+++ b/CovidDataLake.WebApi/appsettings.json
@@ -6,14 +6,29 @@
         "Port": 9092
       }
     ],
-    "Topic":  "covid-data-lake" 
+    "Topic": "covid-data-lake"
   },
   "Storage": {
-    "BasePath":  "E:\\DataLake" 
+    "BasePath": "E:\\DataLake"
   },
   "Validation": {
-    "AllowedFileTypes":  [".csv", ".pdf", ".doc", ".txt"] 
+    "AllowedFileTypes": [ ".csv", ".pdf", ".doc", ".txt" ]
   },
+  "AmazonGeneralConfig": {
+    "ServiceUrl": "aws_service_url"
+  },
+  "RedisIndexCache": {
+    "LockDurationInSeconds": 10
+  },
+  "AmazonIndexFile": {
+    "BucketName": "bucket"
+  },
+  "AmazonRootIndex": {
+    "BucketName": "bucket",
+    "RootIndexName": "root_index.txt",
+    "LockTimeSpanInSeconds": 30
+  },
+  "Redis": "localhost:6379",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
