--- a/CovidDataLake.Queries/CovidDataLake.Queries.csproj
+++ b/CovidDataLake.Queries/CovidDataLake.Queries.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\CovidDataLake.ContentIndexer\CovidDataLake.ContentIndexer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
