Added all indexer and extraction logic for metadata, need to be tested

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -6,11 +6,8 @@
         "Port": 9092
       }
     ],
-    "GroupId": "MetadataIndexer",
+    "GroupId": "ContentIndexer",
     "Topic": "covid-data-lake"
-  },
-  "Storage": {
-    "BasePath": "C:\\Path\\To"
   },
   //AmazonRootIndex__BucketName
   //AmazonIndexFile__BucketName
