--- a/CovidDataLake.MetadataIndexer/packages.config
+++ b/CovidDataLake.MetadataIndexer/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AWSSDK.Core" version="3.7.0.44" targetFramework="net472" />
+  <package id="AWSSDK.S3" version="3.7.1.14" targetFramework="net472" />
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net472" />
