--- a/CovidDataLake.MetadataIndexer/appsettings.json
+++ b/CovidDataLake.MetadataIndexer/appsettings.json
@@ -13,13 +13,16 @@
   //CountMinSketch__BucketName
   "HyperLogLog": {
     "BucketName": "bucket",
-    "LockTimeSpanInSeconds": 30
+    "LockIntervalInSeconds": 30
   },
   "CountMinSketch": {
     "BucketName": "bucket",
-    "LockTimeSpanInSeconds": 30,
+    "LockIntervalInSeconds": 30,
     "ErrorRate": 0.1,
     "Confidence": 0.9
+  },
+  "AmazonIndexConfig": {
+    "BucketName": "bucket"
   },
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
