--- a/CovidDataLake.MetadataIndexer/packages.config
+++ b/CovidDataLake.MetadataIndexer/packages.config
@@ -2,11 +2,14 @@
 <packages>
   <package id="AWSSDK.Core" version="3.7.0.44" targetFramework="net472" />
   <package id="AWSSDK.S3" version="3.7.1.14" targetFramework="net472" />
+  <package id="CardinalityEstimation" version="1.10.0" targetFramework="net472" />
   <package id="Confluent.Kafka" version="1.8.2" targetFramework="net472" />
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
   <package id="Jil" version="2.17.0" targetFramework="net472" />
   <package id="librdkafka.redist" version="1.8.2" targetFramework="net472" />
+  <package id="Maybe.NET" version="1.0.123" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net472" />
@@ -23,9 +26,11 @@
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="murmurhash" version="1.0.3" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="Pipelines.Sockets.Unofficial" version="2.1.16" targetFramework="net472" />
+  <package id="pythonnet" version="3.0.0-preview2022-01-03" targetFramework="net472" />
   <package id="Sigil" version="4.7.0" targetFramework="net472" />
   <package id="StackExchange.Redis" version="2.1.58" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
@@ -55,6 +60,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
