Bug fixes and improvements to all index methods

--- a/CovidDataLake.MetadataIndexer/CovidDataLake.MetadataIndexer.csproj
+++ b/CovidDataLake.MetadataIndexer/CovidDataLake.MetadataIndexer.csproj
@@ -377,6 +377,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extraction\Configuration\MetadataExtractorConfiguration.cs" />
     <Compile Include="Extraction\IMetadataExtractor.cs" />
     <Compile Include="Extraction\TikaMetadataExtractor.cs" />
     <Compile Include="Indexing\Configuration\ProbabilisticMetadataIndexConfiguration.cs" />
