--- a/CovidDataLake.MetadataIndexer/appsettings.json
+++ b/CovidDataLake.MetadataIndexer/appsettings.json
@@ -9,8 +9,9 @@
     "GroupId": "MetadataIndexer",
     "Topic": "covid-data-lake"
   },
-  //HyperLogLog__BucketName
-  //CountMinSketch__BucketName
+  "MetadataExtraction": {
+    "IgnoreMetadataKeys": [ "X-Parsed-By", "FilePath" ] 
+  },
   "HyperLogLog": {
     "BucketName": "bucket",
     "LockIntervalInSeconds": 30
