--- a/CovidDataLake.MetadataIndexer/packages.config
+++ b/CovidDataLake.MetadataIndexer/packages.config
@@ -7,22 +7,26 @@
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
   <package id="Jil" version="2.17.0" targetFramework="net472" />
   <package id="librdkafka.redist" version="1.8.2" targetFramework="net472" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Maybe.NET" version="1.0.123" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.CommandLine" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="2.2.10" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
@@ -37,6 +41,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Console" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net472" />
@@ -86,6 +91,8 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net472" />
+  <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net472" />
   <package id="TikaOnDotnet" version="1.17.1" targetFramework="net472" />
   <package id="TikaOnDotnet.TextExtractor" version="1.17.1" targetFramework="net472" />
 </packages>
