Made the batch consumption wait a configurable interval between consumes

--- a/CovidDataLake.MetadataIndexer/appsettings.json
+++ b/CovidDataLake.MetadataIndexer/appsettings.json
@@ -28,5 +28,8 @@
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
   },
+  "BatchConfig": {
+    "BatchIntervalInSeconds": 5 
+  },
   "Redis": "localhost:6379"
 }
