Added JSON file table wrapper and updated all needed places

--- a/CovidDataLake.WebApi/appsettings.json
+++ b/CovidDataLake.WebApi/appsettings.json
@@ -12,7 +12,7 @@
     "BasePath": "E:\\DataLake"
   },
   "Validation": {
-    "AllowedFileTypes": [ ".csv", ".pdf", ".doc", ".txt" ]
+    "AllowedFileTypes": [ ".csv", ".json" ]
   },
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
