--- a/CovidDataLake.ContentIndexer/CovidDataLake.ContentIndexer.csproj
+++ b/CovidDataLake.ContentIndexer/CovidDataLake.ContentIndexer.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="jil" Version="2.17.0" />
     <PackageReference Include="log4net" Version="2.0.14" />
+    <PackageReference Include="log4net.Ext.Json" Version="2.0.10.1" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
