--- a/CovidDataLake.ContentIndexer/log4net.config
+++ b/CovidDataLake.ContentIndexer/log4net.config
@@ -1,13 +1,21 @@
 ﻿<log4net debug="true">
   <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-    <file value="log.log" />
+    <file value="log.json" />
     <appendToFile value="true" />
-    <rollingStyle value="Size" />
+    <datePattern value="yyyy-MM-dd" />
+    <rollingStyle value="Date" />
+    <PreserveLogFileNameExtension value="true" />
     <maxSizeRollBackups value="10" />
-    <maximumFileSize value="10MB" />
-    <staticLogFileName value="true" />
-    <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date %-5level: %message%newline" />
+    <dateTimeStrategy type="log4net.Appender.RollingFileAppender+UniversalDateTime" />maximumFileSize value="10MB" />
+    <layout type="log4net.Layout.SerializedLayout, log4net.Ext.Json">
+      <decorator type="log4net.Layout.Decorators.StandardTypesDecorator, 
+  log4net.Ext.Json" />
+      <member value="date:date" />
+      <member value="level:level" />
+      <member value="logger:logger" />
+      <member value="message:messageObject" />
+      <member value="exception:exception" />
+      <member value="properties:properties" />
     </layout>
   </appender>
   <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
