--- a/CovidDataLake.MetadataIndexer/app.config
+++ b/CovidDataLake.MetadataIndexer/app.config
@@ -50,6 +50,10 @@
         <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.9.0" newVersion="2.0.9.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
