--- a/CovidDataLake.MetadataIndexer/packages.config
+++ b/CovidDataLake.MetadataIndexer/packages.config
@@ -7,7 +7,8 @@
   <package id="IKVM" version="8.1.5717.0" targetFramework="net472" />
   <package id="Jil" version="2.17.0" targetFramework="net472" />
   <package id="librdkafka.redist" version="1.8.2" targetFramework="net472" />
-  <package id="log4net" version="2.0.8" targetFramework="net472" />
+  <package id="log4net" version="2.0.10" targetFramework="net472" />
+  <package id="log4net.Ext.Json" version="2.0.10.1" targetFramework="net472" />
   <package id="Maybe.NET" version="1.0.123" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
