improved performance with better csv and redis code

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -35,5 +35,5 @@
   "BatchConfig": {
     "BatchIntervalInSeconds": 5
   },
-  "Redis": "localhost:6379"
+  "Redis": "localhost:6379,connectTimeout=15000,syncTimeout=15000"
 }
