better performance for non existing columns

--- a/CovidDataLake.ContentIndexer/appsettings.json
+++ b/CovidDataLake.ContentIndexer/appsettings.json
@@ -15,7 +15,7 @@
   "AmazonRootIndex": {
     "BucketName": "bucket",
     "RootIndexName": "root_index.txt",
-    "LockTimeSpanInSeconds": 30
+    "LockTimeSpanInSeconds": 10000000
   },
   "AmazonIndexFile": {
     "BucketName": "bucket"
@@ -27,7 +27,7 @@
     "MaxRowsPerFile": 1000
   },
   "RedisIndexCache": {
-    "LockDurationInSeconds": 10
+    "LockDurationInSeconds": 10000000
   },
   "AmazonGeneralConfig": {
     "ServiceUrl": "aws_service_url"
